Bug #51018, 44176, 47203 implement load group retargeting and stand alone progress window after we show the helper app dialog. So progress and load information is now retargeted to a stand alone window instead of re-using the underlying  browser / mail window...In order to do this, the external app handler needed to implement nsIURIContentListener. sr=r=rpotts